[gd_scene load_steps=10 format=3 uid="uid://dr1js1iu23i63"]

[ext_resource type="Script" path="res://objects/dog/dog_animation.gd" id="1_0tcq3"]
[ext_resource type="Texture2D" uid="uid://sow718sbu3wo" path="res://assets/chicory/dog/idle/B/00.png" id="2_0edie"]
[ext_resource type="Script" path="res://objects/dog/shadow.gd" id="2_irxnk"]
[ext_resource type="Texture2D" uid="uid://cx7bo0buqvav1" path="res://assets/chicory/clothes/00.png" id="3_jfnic"]
[ext_resource type="Texture2D" uid="uid://dittorykyp6na" path="res://assets/chicory/dog/idle/A/00.png" id="4_swwp0"]
[ext_resource type="Texture2D" uid="uid://cacitfow8667s" path="res://assets/chicory/expression/0.png" id="5_x346j"]
[ext_resource type="Texture2D" uid="uid://1p880ltw8ukl" path="res://assets/chicory/hat/00.png" id="6_6os1e"]
[ext_resource type="Texture2D" uid="uid://cefa6bbhgiyag" path="res://assets/chicory/dog/idle/ear/00.png" id="7_jp0i6"]
[ext_resource type="PackedScene" uid="uid://ctjsen354eycf" path="res://objects/dog/dog_sounds.tscn" id="9_ai2lg"]

[node name="AnimationManager" type="Node2D"]
script = ExtResource("1_0tcq3")

[node name="shadow" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.690196)
position = Vector2(-4, 0)
scale = Vector2(1, 0.35)
script = ExtResource("2_irxnk")

[node name="B" type="Sprite2D" parent="."]
texture = ExtResource("2_0edie")
centered = false
offset = Vector2(-75, -130)

[node name="body" type="Sprite2D" parent="."]
position = Vector2(-4.55, -12.05)
texture = ExtResource("3_jfnic")
centered = false
offset = Vector2(-75, -119)

[node name="body_0" type="Sprite2D" parent="."]
position = Vector2(-4.55, -12.05)
centered = false
offset = Vector2(-75, -119)

[node name="A" type="Sprite2D" parent="."]
texture = ExtResource("4_swwp0")
centered = false
offset = Vector2(-75, -130)

[node name="body_1" type="Sprite2D" parent="."]
position = Vector2(-4.55, -12.05)
centered = false
offset = Vector2(-75, -119)

[node name="body_2_hat" type="Sprite2D" parent="."]
position = Vector2(-4.55, -12.05)
centered = false
offset = Vector2(-75, -119)

[node name="hat_1" type="Sprite2D" parent="."]
position = Vector2(-2.5, -45.6)
centered = false
offset = Vector2(-77, -84)

[node name="head" type="Sprite2D" parent="."]
position = Vector2(-2.5, -45.6)
texture = ExtResource("5_x346j")
centered = false
offset = Vector2(-77, -84)

[node name="hair" type="Sprite2D" parent="."]
position = Vector2(-2.5, -45.6)
centered = false
offset = Vector2(-77, -84)

[node name="body_2" type="Sprite2D" parent="."]
position = Vector2(-2.5, -45.6)
centered = false
offset = Vector2(-75, -119)

[node name="hat" type="Sprite2D" parent="."]
position = Vector2(-2.5, -45.6)
texture = ExtResource("6_6os1e")
centered = false
offset = Vector2(-77, -84)

[node name="ear" type="Sprite2D" parent="."]
texture = ExtResource("7_jp0i6")
centered = false
offset = Vector2(-75, -130)

[node name="SoundManager" parent="." instance=ExtResource("9_ai2lg")]
